# if NOLUNALIB
# $(error "You need define LUNALIB_ROOT in environment varible")
# endif

noinst_LTLIBRARIES = libsqlite.la
libsqlite_la_SOURCES = sqlite3.c

# noinst_LIBRARIES = liblunakvs.a

# liblunakvs_a_SOURCES = 			\
# 	kvstore.c

LIBS = -lpthread


AM_CFLAGS =  -D@OSSYS@
# AM_CXXFLAGS =  -DLINUX -std=c++0x
# noinst_HEADERS = kvstore.h hash.h list.h 
 



