# if NOLUNALIB
# $(error "You need define LUNALIB_ROOT in environment varible")
# endif

noinst_LTLIBRARIES = libzlog.la

libzlog_la_SOURCES = buf.c category.c category_table.c conf.c event.c format.c level.c level_list.c mdc.c record.c record_table.c release.c rotater.c rule.c spec.c thread.c thread_list.c zc_arraylist.c zc_hashtable.c zc_profile.c zc_util.c zlog.c zlog-chk-conf.c


# INCLUDES = -I/usr/local/include/
LIBS = -lpthread

# libzlog_la_LDFLAGS = -lpthread
# libzlog_la_LIBADD = -lm
# libzlog_la_CFLAGS= -fPIC


# AM_CFLAGS =  -DLINUX
# AM_CXXFLAGS =  -DLINUX -std=c++0x




